# k-steering

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: GLOSSARY.md  README.md  installation.md  quickstart.md
docs/api/: arg_glossary.md
docs/concepts/: core.md
docs/datasets/: huggingface.md  local.md  predefined.md
docs/misc/: larger_model_setup.md
examples/: 01_k_steer.py  02_caa_steer.py  03_k_steer_external_dataset.py  04_steering_alpha_sweep.py
martian_documentation/source/: conf.py  core-concepts.rst  how-it-works.rst  index.rst
src/k_steering/: __init__.py
src/k_steering/data/: eval_prompt_templates.py  task_prompts.py
src/k_steering/evals/judges/: alpaca_judge.py  base.py  base_judge.py  debate.py  ood.py  tone.py
src/k_steering/evals/others/: base_eval.py  tiny_alpaca.py  tiny_mmlu.py
src/k_steering/steering/: base.py  caa.py  config.py  dataset.py  k_steer.py  trainer.py
src/k_steering/utils/: constants.py  data.py  dataclasses.py  io.py  model.py  prompt_templates.py  sweep.py
tests/evals/: test_alpaca_judge.py  test_base_judge.py  test_debate_judge.py  test_ood_judge.py  test_tone_judge.py
tests/steering/: test_base.py  test_caa.py  test_ksteer.py  test_trainer.py
tests/utils/: test_data.py  test_io.py  test_model.py  test_sweep.py
