[project]
name = "k-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shreyansjainn", email = "jshrey8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "cbor2==5.7.1",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "datasets==4.1.1",
    "decorator==5.2.1",
    "dill==0.4.0",
    "distro==1.9.0",
    "executing==2.2.1",
    "filelock==3.20.0",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "grpclib==0.4.8",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "ipdb==0.13.13",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "modal==1.2.4",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "narwhals==2.13.0",
    "networkx==3.6.1",
    "numpy==2.3.3",
    "openai==1.109.1",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "plotly==6.3.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentencepiece==0.2.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "synchronicity==0.10.5",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.56.2",
    "typer==0.20.0",
    "types-certifi==2021.10.8.3",
    "types-toml==0.10.8.20240310",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.6.1",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
