[project]
name = "k-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shreyansjainn", email = "jshrey8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets==4.1.1",
    "huggingface-hub==0.35.1",
    "jinja2==3.1.6",
    "numpy==2.3.3",
    "openai==1.109.1",
    "pandas==2.3.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers==4.56.2",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
