[project]
name = "k-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shreyansjainn", email = "jshrey8@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.76.0",
    "datasets==4.1.1",
    "decorator==5.2.1",
    "dill==0.4.0",
    "distro==1.9.0",
    "executing==2.2.1",
    "filelock==3.20.0",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "grpclib==0.4.8",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.1",
    "jinja2==3.1.6",
    "numpy==2.3.3",
    "openai==1.109.1",
    "pandas==2.3.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers==4.56.2",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
packages = ["src/k_steering"]
